# claude-soul

./: .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  LICENSE  README.md  install-agents.sh  install.sh  skills-lock.json
.claude/: calib-capture.sh  learn-gate.sh  learn-hooks-eval.sh  lookup-reminder.sh  session-context.sh  settings.json
.claude/agents/: AGENT-DELEGATION-RULES.md  android-gradle-debugger.md  code-quality-guardian.md  feature-orchestrator.md  security-compliance-officer.md
.claude/commands/: audit-catalog.md  breakdown-design.md  create-jira-task.md  do-implementation.md  feature-report.md  learn.md  plan-first.md  prd-align.md  production-to-jira.md  push-pr.md  qa-align.md  quality-publish-confluence.md  quality-to-jira.md  search-code.md  system-design.md  trd.md  ui-test.md
.docs/calibration/: README.md  calib.py
.docs/common-issues/: README.md  code-rag-bind-mount-ignores-gitignore.md  confirm-positive-signal-before-teardown.md  cp-into-existing-dir-nests.md  gitignore-secrets-before-first-push.md  (+5 more)
hooks/: pre-commit
tools/code-rag/: .env.example  Dockerfile  Makefile  README.md  docker-compose.project.yml  docker-compose.shared.yml  docker-compose.yml  pyproject.toml
tools/code-rag/app/: chunker.py  config.py  embedder.py  gitignore.py  indexer.py  mcp_server.py  qdrant_store.py  reranker.py  watcher.py
tools/code-rag/reranker_service/: Dockerfile  server.py
tools/code-rag/tests/: test_chunker.py  test_gitignore.py  test_indexer.py  test_mcp.py  test_reranker.py  test_scaling_hardening.py  test_watcher.py
(+66 files in other folders)
