[project]
name = "code-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "qdrant-client>=1.12.0",
  "fastembed>=0.5.0",
  "httpx>=0.27.0",
  "watchdog>=4.0.0",
  "pydantic>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
skips = ["B101"]
